// Copyright Â© 2023 The Things Network Foundation, The Things Industries B.V.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package ttn.lorawan.v3;

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "thethings/flags/annotations.proto";
import "ttn/lorawan/v3/end_device.proto";
import "ttn/lorawan/v3/identifiers.proto";
import "ttn/lorawan/v3/lorawan.proto";
import "validate/validate.proto";

option go_package = "go.thethings.network/lorawan-stack/v3/pkg/ttnpb";

message RelayConfiguration {
  option (thethings.flags.message) = {
    select: true,
    set: true,
    semantical: true
  };

  message Serving {
    option (thethings.flags.message) = {
      select: true,
      set: true
    };

    // Second wake on radio channel configuration.
    RelaySecondChannel second_channel = 1;
    // Index of the default wake on radio channel.
    uint32 default_channel_index = 2 [(validate.rules).uint32.lte = 255];
    // Channel activity detection periodicity.
    RelayCADPeriodicity cad_periodicity = 3 [(validate.rules).enum.defined_only = true];
    // Configured forwarding limits.
    // If unset, the default value from Network Server configuration will be used.
    ServingRelayForwardingLimits limits = 4;
  }

  message Served {
    option (thethings.flags.message) = {
      select: true,
      set: true
    };

    oneof mode {
      option (validate.required) = true;

      // The end device will always attempt to use the relay mode in order to send uplink messages.
      RelayEndDeviceAlwaysMode always = 1;
      // The end device will attempt to use relay mode only after a number of uplink messages have been sent without
      // receiving a valid a downlink message.
      RelayEndDeviceDynamicMode dynamic = 2;
      // The end device will control when it uses the relay mode. This is the default mode.
      RelayEndDeviceControlledMode end_device_controlled = 3;
    }
    // Number of uplinks to be sent without a wake on radio frame.
    uint32 backoff = 4 [(validate.rules).uint32.lte = 63];
    // Second wake on radio channel configuration.
    RelaySecondChannel second_channel = 5;

    // End device identifier of the serving end device.
    string serving_device_id = 6 [(validate.rules).string = {
      pattern: "^[a-z0-9](?:[-]?[a-z0-9]){2,}$",
      max_len: 36
    }];
  }

  oneof mode {
    option (validate.required) = true;

    Serving serving = 1;
    Served served = 2;
  }
}

message CreateRelayRequest {
  // End device identifiers of the relay.
  EndDeviceIdentifiers end_device_ids = 1 [(validate.rules).message.required = true];

  // Relay configuration.
  RelayConfiguration configuration = 2 [(validate.rules).message.required = true];
}

message CreateRelayResponse {
  // Relay configuration.
  RelayConfiguration configuration = 1;
}

message GetRelayRequest {
  // End device identifiers of the relay.
  EndDeviceIdentifiers end_device_ids = 1 [(validate.rules).message.required = true];

  // Field mask of the fields to return.
  google.protobuf.FieldMask field_mask = 2;
}

message GetRelayResponse {
  // Relay configuration.
  RelayConfiguration configuration = 1;
}

message UpdateRelayRequest {
  // End device identifiers of the relay.
  EndDeviceIdentifiers end_device_ids = 1 [(validate.rules).message.required = true];

  // Relay configuration.
  RelayConfiguration configuration = 2 [(validate.rules).message.required = true];

  // Field mask of the fields to update.
  google.protobuf.FieldMask field_mask = 3;
}

message UpdateRelayResponse {
  // Relay configuration.
  RelayConfiguration configuration = 1;
}

message DeleteRelayRequest {
  // End device identifiers of the relay.
  EndDeviceIdentifiers end_device_ids = 1 [(validate.rules).message.required = true];
}

message DeleteRelayResponse {}

message RelayConfigurationUplinkForwardingRule {
  option (thethings.flags.message) = {
    select: true,
    set: true
  };

  // Bucket configuration for the served end device.
  // If unset, no individual limits will apply to the end device, but the relay global limitations will apply.
  RelayUplinkForwardLimits limits = 1;
  // Last wake on radio frame counter used by the served end device.
  uint32 last_w_f_cnt = 2;

  // End device identifier of the served end device.
  string device_id = 3 [(validate.rules).string = {
    pattern: "^[a-z0-9](?:[-]?[a-z0-9]){2,}$",
    max_len: 36
  }];
}

message CreateRelayUplinkForwardingRuleRequest {
  // End device identifiers of the relay.
  EndDeviceIdentifiers end_device_ids = 1 [(validate.rules).message.required = true];

  // Index of the uplink forwarding rule.
  uint32 index = 2 [(validate.rules).uint32.lte = 15];

  // Uplink forwarding rule.
  RelayConfigurationUplinkForwardingRule uplink_forwarding_rule = 3 [(validate.rules).message.required = true];
}

message CreateRelayUplinkForwardingRuleResponse {
  // Uplink forwarding rule.
  RelayConfigurationUplinkForwardingRule uplink_forwarding_rule = 1;
}

message GetRelayUplinkForwardingRuleRequest {
  // End device identifiers of the relay.
  EndDeviceIdentifiers end_device_ids = 1 [(validate.rules).message.required = true];

  // Index of the uplink forwarding rule.
  uint32 index = 2 [(validate.rules).uint32.lte = 15];

  // Field mask of the fields to return.
  google.protobuf.FieldMask field_mask = 3;
}

message GetRelayUplinkForwardingRuleResponse {
  // Uplink forwarding rule.
  RelayConfigurationUplinkForwardingRule uplink_forwarding_rule = 1;
}

message ListRelayUplinkForwardingRulesRequest {
  // End device identifiers of the relay.
  EndDeviceIdentifiers end_device_ids = 1 [(validate.rules).message.required = true];

  // Field mask of the fields to return.
  google.protobuf.FieldMask field_mask = 2;
}

message ListRelayUplinkForwardingRulesResponse {
  // Uplink forwarding rules.
  repeated RelayConfigurationUplinkForwardingRule uplink_forwarding_rules = 1;
}

message UpdateRelayUplinkForwardingRuleRequest {
  // End device identifiers of the relay.
  EndDeviceIdentifiers end_device_ids = 1 [(validate.rules).message.required = true];

  // Index of the uplink forwarding rule.
  uint32 index = 2 [(validate.rules).uint32.lte = 15];

  // Uplink forwarding rule.
  RelayConfigurationUplinkForwardingRule uplink_forwarding_rule = 3 [(validate.rules).message.required = true];

  // Field mask of the fields to update.
  google.protobuf.FieldMask field_mask = 4;
}

message UpdateRelayUplinkForwardingRuleResponse {
  // Uplink forwarding rule.
  RelayConfigurationUplinkForwardingRule uplink_forwarding_rule = 1;
}

message DeleteRelayUplinkForwardingRuleRequest {
  // End device identifiers of the relay.
  EndDeviceIdentifiers end_device_ids = 1 [(validate.rules).message.required = true];

  // Index of the uplink forwarding rule.
  uint32 index = 2 [(validate.rules).uint32.lte = 15];
}

message DeleteRelayUplinkForwardingRuleResponse {}

// The NsRelayConfigurationService provides configuration management capabilities for relays.
service NsRelayConfigurationService {
  // Create a relay.
  rpc CreateRelay(CreateRelayRequest) returns (CreateRelayResponse) {
    option (google.api.http) = {
      post: "/ns/applications/{end_device_ids.application_ids.application_id}/relays"
      body: "*"
    };
  }
  // Get a relay.
  rpc GetRelay(GetRelayRequest) returns (GetRelayResponse) {
    option (google.api.http) = {get: "/ns/applications/{end_device_ids.application_ids.application_id}/relays/{end_device_ids.device_id}"};
  }
  // Update a relay.
  rpc UpdateRelay(UpdateRelayRequest) returns (UpdateRelayResponse) {
    option (google.api.http) = {
      put: "/ns/applications/{end_device_ids.application_ids.application_id}/relays/{end_device_ids.device_id}"
      body: "*"
    };
  }
  // Delete a relay.
  rpc DeleteRelay(DeleteRelayRequest) returns (DeleteRelayResponse) {
    option (google.api.http) = {delete: "/ns/applications/{end_device_ids.application_ids.application_id}/relays/{end_device_ids.device_id}"};
  }

  // Create an uplink forwarding rule.
  rpc CreateRelayUplinkForwardingRule(CreateRelayUplinkForwardingRuleRequest) returns (CreateRelayUplinkForwardingRuleResponse) {
    option (google.api.http) = {
      post: "/ns/applications/{end_device_ids.application_ids.application_id}/relays/{end_device_ids.device_id}/uplink-forwarding-rules"
      body: "*"
    };
  }
  // Get an uplink forwarding rule.
  rpc GetRelayUplinkForwardingRule(GetRelayUplinkForwardingRuleRequest) returns (GetRelayUplinkForwardingRuleResponse) {
    option (google.api.http) = {get: "/ns/applications/{end_device_ids.application_ids.application_id}/relays/{end_device_ids.device_id}/uplink-forwarding-rules/{index}"};
  }
  // List uplink forwarding rules.
  rpc ListRelayUplinkForwardingRules(ListRelayUplinkForwardingRulesRequest) returns (ListRelayUplinkForwardingRulesResponse) {
    option (google.api.http) = {get: "/ns/applications/{end_device_ids.application_ids.application_id}/relays/{end_device_ids.device_id}/uplink-forwarding-rules"};
  }
  // Update an uplink forwarding rule.
  rpc UpdateRelayUplinkForwardingRule(UpdateRelayUplinkForwardingRuleRequest) returns (UpdateRelayUplinkForwardingRuleResponse) {
    option (google.api.http) = {
      put: "/ns/applications/{end_device_ids.application_ids.application_id}/relays/{end_device_ids.device_id}/uplink-forwarding-rules/{index}"
      body: "*"
    };
  }
  // Delete an uplink forwarding rule.
  rpc DeleteRelayUplinkForwardingRule(DeleteRelayUplinkForwardingRuleRequest) returns (DeleteRelayUplinkForwardingRuleResponse) {
    option (google.api.http) = {delete: "/ns/applications/{end_device_ids.application_ids.application_id}/relays/{end_device_ids.device_id}/uplink-forwarding-rules/{index}"};
  }
}
